--- a/style.css
+++ b/style.css
@@ -3,13 +3,60 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    background-image: url(/images/skyscraper-3094696_960_720.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-d{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+}
 header{
     margin: 0 auto 6% auto;
+    width: 40em;
+  
 }
 
 h1{
+    position: relative;
     text-align: center;
+    color: #ffff;
+    font-weight: 600;
+   
+   
 }
 h1::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    bottom: -3px;
+    left: 0;
+    background-color: rgb(0, 140, 255);
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 500ms ease;
+}
+body:hover h1::after{
+    transform: scaleX(1);
+}
+.card-img-overlay {
+    position: relative;
+}
+ #cardAnimation{
+    margin: 1.1rem;
+    border: 2px solid black;
+    transition: all 500ms ease-in-out;
     
+} 
+#cardAnimation:hover{
+    flex-grow: 1.23;
+    cursor: pointer;
+    
+    
+    
+
 }
